<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/actualizar_contactos"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/actualizar_contactos"/>
    
    <item
        android:id="@+id/generar_claves"
        android:orderInCategory="60"
        android:showAsAction="never"
        android:title="@string/generar_claves"/>
    
    <item
        android:id="@+id/actualizar_claves"
        android:orderInCategory="70"
        android:showAsAction="never"
        android:title="@string/actualizar_claves"/>
    
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="80"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    
    <item
        android:id="@+id/menu_acercaDe"
        android:orderInCategory="90"
        android:title="@string/acercaDe"/>

    <item
        android:id="@+id/salir"
        android:orderInCategory="100"
        android:title="@string/salir"/>

</menu>